--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,11 +12,18 @@ services:
       - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-simstudio}
       - BETTER_AUTH_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3000}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3000}
-      - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET:-your_auth_secret_here}
-      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-your_encryption_key_here}
+      - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET:-super_secret_auth_key_that_is_at_least_32_characters_long_for_security}
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-super_secret_encryption_key_that_is_at_least_32_characters_long_for_security}
+      - INTERNAL_API_SECRET=${INTERNAL_API_SECRET:-internal_api_secret_key_that_is_at_least_32_characters_long_for_security}
+      - DISABLE_REGISTRATION=${DISABLE_REGISTRATION:-false}
+      - NODE_ENV=development
       - OLLAMA_URL=${OLLAMA_URL:-http://localhost:11434}
-      - SOCKET_SERVER_URL=${SOCKET_SERVER_URL:-http://localhost:3002}
+      - SOCKET_SERVER_URL=${SOCKET_SERVER_URL:-http://realtime:3002}
       - NEXT_PUBLIC_SOCKET_URL=${NEXT_PUBLIC_SOCKET_URL:-http://localhost:3002}
+      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID:-dummy}
+      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET:-dummy}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-dummy}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-dummy}
     depends_on:
       db:
         condition: service_healthy
@@ -44,7 +51,7 @@ services:
       - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-simstudio}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3000}
       - BETTER_AUTH_URL=${BETTER_AUTH_URL:-http://localhost:3000}
-      - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET:-your_auth_secret_here}
+      - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET:-super_secret_auth_key_that_is_at_least_32_characters_long_for_security}
     depends_on:
       db:
         condition: service_healthy
