--- a/helm/sim/values.yaml
+++ b/helm/sim/values.yaml
@@ -52,7 +52,7 @@ app:
     # Application URLs
     NEXT_PUBLIC_APP_URL: "http://localhost:3000"
     BETTER_AUTH_URL: "http://localhost:3000"
-    SOCKET_SERVER_URL: "http://localhost:3002"
+    SOCKET_SERVER_URL: "http://realtime:3002"
     NEXT_PUBLIC_SOCKET_URL: "http://localhost:3002"
     
     # Node environment
